--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -14,20 +14,20 @@
             </li>
             <li class="list-group-item">
               <div class="h6 text-muted">
-                Автор Дмитрий Курбанов
               </div>
             </li>
           </ul>
         </div>
       </div>
     </div>
-    <!-- Тело страницы -->
+
     <div class="col-md-9">
       <div class="card-body">
         <div class="card-text">
-          <p>Пытаюсь освоить новые горизонты </p>
+            <h1>Дмитрий Курбанов - студент Яндекс Практикума, python</h1>
+          <p><h2>Пытаюсь освоить новые горизонты</h2> </p>
         </div>
       </div>
     </div>
   </div>
-{% endblock %} 
+{% endblock %}
