--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -14,7 +14,7 @@
             </li>
             <li class="list-group-item">
               <div class="h6 text-muted">
-                Проект социальной сети на фреимворке Django. При создании используются знания полученные на Яндекс Практикуме
+
               </div>
             </li>
           </ul>
@@ -25,9 +25,9 @@
     <div class="col-md-9">
       <div class="card-body">
         <div class="card-text">
-          <p></p>
+          <p><h2>Проект социальной сети на фреимворке Django. При создании используются знания полученные на Яндекс Практикуме</h2></p>
         </div>
       </div>
     </div>
   </div>
-{% endblock %} 
+{% endblock %}
